--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,14 @@
   "main": [
     "xp-components.html"
   ],
+  "ignore": [
+    "**/.*",
+    "bin",
+    "index.js",
+    "lib",
+    "node_modules",
+    "package.json"
+  ],
   "dependencies": {
     "xp-anchor-state": "ExpandJS/xp-anchor-state",
     "xp-animation": "ExpandJS/xp-animation",
