--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "xp-elements",
   "license": "BSD-3-Clause",
   "version": "0.8.0",
-  "description": "This is a collection of ExpandJS elements.",
+  "description": "This is a collection of expandjs elements.",
+  "homepage": "http://www.expandjs.com/elements/xp-elements",
   "authors": [
     "Giuliano Rullo <g.rullo@expandjs.com>",
     "Maurizio Stefàno <m.stefano@expandjs.com>",
@@ -31,6 +32,7 @@
     "xp-doc-parser": "ExpandJS/xp-doc-parser",
     "xp-doc-viewer": "ExpandJS/xp-doc-viewer",
     "xp-embedded-state": "ExpandJS/xp-embedded-state",
+    "xp-emitter": "ExpandJS/xp-emitter",
     "xp-focused-state": "ExpandJS/xp-focused-state",
     "xp-grid": "ExpandJS/xp-grid",
     "xp-i18n": "ExpandJS/xp-i18n",
@@ -43,13 +45,15 @@
     "xp-master-state": "ExpandJS/xp-master-state",
     "xp-media-query": "ExpandJS/xp-media-query",
     "xp-meta": "ExpandJS/xp-meta",
-    "xp-notifier": "ExpandJS/xp-notifier",
+    "xp-observer": "ExpandJS/xp-notifier",
     "xp-overlay": "ExpandJS/xp-overlay",
     "xp-overlay-state": "ExpandJS/xp-overlay-state",
     "xp-pages": "ExpandJS/xp-pages",
     "xp-pressed-state": "ExpandJS/xp-pressed-state",
     "xp-referral": "ExpandJS/xp-referral",
+    "xp-request": "ExpandJS/xp-request",
     "xp-router": "ExpandJS/xp-router",
+    "xp-schema": "ExpandJS/xp-schema",
     "xp-script": "ExpandJS/xp-script",
     "xp-selected-state": "ExpandJS/xp-selected-state",
     "xp-shared": "ExpandJS/xp-shared",
