--- a/bower.json
+++ b/bower.json
@@ -45,7 +45,8 @@
     "xp-master-state": "ExpandJS/xp-master-state",
     "xp-media-query": "ExpandJS/xp-media-query",
     "xp-meta": "ExpandJS/xp-meta",
-    "xp-observer": "ExpandJS/xp-notifier",
+    "xp-notifier": "ExpandJS/xp-notifier",
+    "xp-observer": "ExpandJS/xp-observer",
     "xp-overlay": "ExpandJS/xp-overlay",
     "xp-overlay-state": "ExpandJS/xp-overlay-state",
     "xp-pages": "ExpandJS/xp-pages",
