--- a/bower.json
+++ b/bower.json
@@ -24,46 +24,46 @@
     "**/.*"
   ],
   "dependencies": {
-    "xp-anchor-state": "ExpandJS/xp-anchor-state",
-    "xp-animation": "ExpandJS/xp-animation",
-    "xp-collapse": "ExpandJS/xp-collapse",
-    "xp-cookie": "ExpandJS/xp-cookie",
-    "xp-device": "ExpandJS/xp-device",
-    "xp-dialog": "ExpandJS/xp-dialog",
-    "xp-disabled-state": "ExpandJS/xp-disabled-state",
-    "xp-doc-page": "ExpandJS/xp-doc-page",
-    "xp-doc-parser": "ExpandJS/xp-doc-parser",
-    "xp-doc-viewer": "ExpandJS/xp-doc-viewer",
-    "xp-embedded-state": "ExpandJS/xp-embedded-state",
-    "xp-emitter": "ExpandJS/xp-emitter",
-    "xp-focused-state": "ExpandJS/xp-focused-state",
-    "xp-grid": "ExpandJS/xp-grid",
-    "xp-i18n": "ExpandJS/xp-i18n",
-    "xp-icon": "ExpandJS/xp-icon",
-    "xp-iconset": "ExpandJS/xp-iconset",
-    "xp-input-state": "ExpandJS/xp-input-state",
-    "xp-label": "ExpandJS/xp-label",
-    "xp-list": "ExpandJS/xp-list",
-    "xp-markdown": "ExpandJS/xp-markdown",
-    "xp-master-state": "ExpandJS/xp-master-state",
-    "xp-media-query": "ExpandJS/xp-media-query",
-    "xp-meta": "ExpandJS/xp-meta",
-    "xp-notifier": "ExpandJS/xp-notifier",
-    "xp-observer": "ExpandJS/xp-observer",
-    "xp-overlay": "ExpandJS/xp-overlay",
-    "xp-overlay-state": "ExpandJS/xp-overlay-state",
-    "xp-pages": "ExpandJS/xp-pages",
-    "xp-pressed-state": "ExpandJS/xp-pressed-state",
-    "xp-referral": "ExpandJS/xp-referral",
-    "xp-request": "ExpandJS/xp-request",
-    "xp-router": "ExpandJS/xp-router",
-    "xp-schema": "ExpandJS/xp-schema",
-    "xp-script": "ExpandJS/xp-script",
-    "xp-selected-state": "ExpandJS/xp-selected-state",
-    "xp-shared": "ExpandJS/xp-shared",
-    "xp-slave-state": "ExpandJS/xp-slave-state",
-    "xp-targeter": "ExpandJS/xp-targeter",
-    "xp-tooltip": "ExpandJS/xp-tooltip",
-    "xp-window": "ExpandJS/xp-window"
+    "xp-anchor-state": "ExpandJS/xp-anchor-state#alpha",
+    "xp-animation": "ExpandJS/xp-animation#alpha",
+    "xp-collapse": "ExpandJS/xp-collapse#alpha",
+    "xp-cookie": "ExpandJS/xp-cookie#alpha",
+    "xp-device": "ExpandJS/xp-device#alpha",
+    "xp-dialog": "ExpandJS/xp-dialog#alpha",
+    "xp-disabled-state": "ExpandJS/xp-disabled-state#alpha",
+    "xp-doc-page": "ExpandJS/xp-doc-page#alpha",
+    "xp-doc-parser": "ExpandJS/xp-doc-parser#alpha",
+    "xp-doc-viewer": "ExpandJS/xp-doc-viewer#alpha",
+    "xp-embedded-state": "ExpandJS/xp-embedded-state#alpha",
+    "xp-emitter": "ExpandJS/xp-emitter#alpha",
+    "xp-focused-state": "ExpandJS/xp-focused-state#alpha",
+    "xp-grid": "ExpandJS/xp-grid#alpha",
+    "xp-i18n": "ExpandJS/xp-i18n#alpha",
+    "xp-icon": "ExpandJS/xp-icon#alpha",
+    "xp-iconset": "ExpandJS/xp-iconset#alpha",
+    "xp-input-state": "ExpandJS/xp-input-state#alpha",
+    "xp-label": "ExpandJS/xp-label#alpha",
+    "xp-list": "ExpandJS/xp-list#alpha",
+    "xp-markdown": "ExpandJS/xp-markdown#alpha",
+    "xp-master-state": "ExpandJS/xp-master-state#alpha",
+    "xp-media-query": "ExpandJS/xp-media-query#alpha",
+    "xp-meta": "ExpandJS/xp-meta#alpha",
+    "xp-notifier": "ExpandJS/xp-notifier#alpha",
+    "xp-observer": "ExpandJS/xp-observer#alpha",
+    "xp-overlay": "ExpandJS/xp-overlay#alpha",
+    "xp-overlay-state": "ExpandJS/xp-overlay-state#alpha",
+    "xp-pages": "ExpandJS/xp-pages#alpha",
+    "xp-pressed-state": "ExpandJS/xp-pressed-state#alpha",
+    "xp-referral": "ExpandJS/xp-referral#alpha",
+    "xp-request": "ExpandJS/xp-request#alpha",
+    "xp-router": "ExpandJS/xp-router#alpha",
+    "xp-schema": "ExpandJS/xp-schema#alpha",
+    "xp-script": "ExpandJS/xp-script#alpha",
+    "xp-selected-state": "ExpandJS/xp-selected-state#alpha",
+    "xp-shared": "ExpandJS/xp-shared#alpha",
+    "xp-slave-state": "ExpandJS/xp-slave-state#alpha",
+    "xp-targeter": "ExpandJS/xp-targeter#alpha",
+    "xp-tooltip": "ExpandJS/xp-tooltip#alpha",
+    "xp-window": "ExpandJS/xp-window#alpha"
   }
 }
