--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "xp-elements",
   "license": "BSD-3-Clause",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "description": "A collection of ExpandJS elements",
   "homepage": "http://expandjs.com/elements/xp-elements",
   "authors": [
@@ -24,45 +24,45 @@
     "**/.*"
   ],
   "dependencies": {
-    "xp-anchor-behavior": "ExpandJS/xp-anchor-behavior",
-    "xp-animation": "ExpandJS/xp-animation",
-    "xp-collapse": "ExpandJS/xp-collapse",
-    "xp-cookie": "ExpandJS/xp-cookie",
-    "xp-device": "ExpandJS/xp-device",
-    "xp-dialog": "ExpandJS/xp-dialog",
-    "xp-doc-page": "ExpandJS/xp-doc-page",
-    "xp-doc-parser": "ExpandJS/xp-doc-parser",
-    "xp-doc-viewer": "ExpandJS/xp-doc-viewer",
-    "xp-embedded-behavior": "ExpandJS/xp-embedded-behavior",
-    "xp-emitter": "ExpandJS/xp-emitter",
-    "xp-focused-behavior": "ExpandJS/xp-focused-behavior",
-    "xp-grid": "ExpandJS/xp-grid",
-    "xp-i18n-behavior": "ExpandJS/xp-i18n-behavior",
-    "xp-icon": "ExpandJS/xp-icon",
-    "xp-iconset": "ExpandJS/xp-iconset",
-    "xp-input-behavior": "ExpandJS/xp-input-behavior",
-    "xp-label": "ExpandJS/xp-label",
-    "xp-list": "ExpandJS/xp-list",
-    "xp-markdown": "ExpandJS/xp-markdown",
-    "xp-master-state": "ExpandJS/xp-master-state",
-    "xp-media-query": "ExpandJS/xp-media-query",
-    "xp-meta": "ExpandJS/xp-meta",
-    "xp-observer": "ExpandJS/xp-observer",
-    "xp-overlay": "ExpandJS/xp-overlay",
-    "xp-overlay-behavior": "ExpandJS/xp-overlay-behavior",
-    "xp-pages": "ExpandJS/xp-pages",
-    "xp-pressed-behavior": "ExpandJS/xp-pressed-behavior",
-    "xp-pubsub-behavior": "ExpandJS/xp-pubsub-behavior",
-    "xp-referral-behavior": "ExpandJS/xp-referral-behavior",
-    "xp-request": "ExpandJS/xp-request",
-    "xp-router": "ExpandJS/xp-router",
-    "xp-schema": "ExpandJS/xp-schema",
-    "xp-script": "ExpandJS/xp-script",
-    "xp-selected-behavior": "ExpandJS/xp-selected-behavior",
-    "xp-shared": "ExpandJS/xp-shared",
-    "xp-slave-state": "ExpandJS/xp-slave-state",
-    "xp-targeter-behavior": "ExpandJS/xp-targeter-behavior",
-    "xp-tooltip": "ExpandJS/xp-tooltip",
-    "xp-window": "ExpandJS/xp-window"
+    "xp-anchor-behavior": "ExpandJS/xp-anchor-behavior#0.9.1",
+    "xp-animation": "ExpandJS/xp-animation#0.9.1",
+    "xp-collapse": "ExpandJS/xp-collapse#0.9.1",
+    "xp-cookie": "ExpandJS/xp-cookie#0.9.1",
+    "xp-device": "ExpandJS/xp-device#0.9.1",
+    "xp-dialog": "ExpandJS/xp-dialog#0.9.1",
+    "xp-doc-page": "ExpandJS/xp-doc-page#0.9.1",
+    "xp-doc-parser": "ExpandJS/xp-doc-parser#0.9.1",
+    "xp-doc-viewer": "ExpandJS/xp-doc-viewer#0.9.1",
+    "xp-embedded-behavior": "ExpandJS/xp-embedded-behavior#0.9.1",
+    "xp-emitter": "ExpandJS/xp-emitter#0.9.1",
+    "xp-focused-behavior": "ExpandJS/xp-focused-behavior#0.9.1",
+    "xp-grid": "ExpandJS/xp-grid#0.9.1",
+    "xp-i18n-behavior": "ExpandJS/xp-i18n-behavior#0.9.1",
+    "xp-icon": "ExpandJS/xp-icon#0.9.1",
+    "xp-iconset": "ExpandJS/xp-iconset#0.9.1",
+    "xp-input-behavior": "ExpandJS/xp-input-behavior#0.9.1",
+    "xp-label": "ExpandJS/xp-label#0.9.1",
+    "xp-list": "ExpandJS/xp-list#0.9.1",
+    "xp-markdown": "ExpandJS/xp-markdown#0.9.1",
+    "xp-master-state": "ExpandJS/xp-master-state#0.9.1",
+    "xp-media-query": "ExpandJS/xp-media-query#0.9.1",
+    "xp-meta": "ExpandJS/xp-meta#0.9.1",
+    "xp-observer": "ExpandJS/xp-observer#0.9.1",
+    "xp-overlay": "ExpandJS/xp-overlay#0.9.1",
+    "xp-overlay-behavior": "ExpandJS/xp-overlay-behavior#0.9.1",
+    "xp-pages": "ExpandJS/xp-pages#0.9.1",
+    "xp-pressed-behavior": "ExpandJS/xp-pressed-behavior#0.9.1",
+    "xp-pubsub-behavior": "ExpandJS/xp-pubsub-behavior#0.9.1",
+    "xp-referral-behavior": "ExpandJS/xp-referral-behavior#0.9.1",
+    "xp-request": "ExpandJS/xp-request#0.9.1",
+    "xp-router": "ExpandJS/xp-router#0.9.1",
+    "xp-schema": "ExpandJS/xp-schema#0.9.1",
+    "xp-script": "ExpandJS/xp-script#0.9.1",
+    "xp-selected-behavior": "ExpandJS/xp-selected-behavior#0.9.1",
+    "xp-shared": "ExpandJS/xp-shared#0.9.1",
+    "xp-slave-state": "ExpandJS/xp-slave-state#0.9.1",
+    "xp-targeter-behavior": "ExpandJS/xp-targeter-behavior#0.9.1",
+    "xp-tooltip": "ExpandJS/xp-tooltip#0.9.1",
+    "xp-window": "ExpandJS/xp-window#0.9.1"
   }
 }
