- Added xp-adapter-behavior - Added xp-form - Improved xp-request - Major bug fixes - Updated dependencies - Updated documentation

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "xp-elements",
   "license": "BSD-3-Clause",
-  "version": "0.9.3",
+  "version": "0.9.4",
   "description": "A collection of ExpandJS elements",
   "homepage": "http://expandjs.com/elements/xp-elements",
   "authors": [
@@ -24,46 +24,48 @@
     "**/.*"
   ],
   "dependencies": {
-    "xp-anchor-behavior": "ExpandJS/xp-anchor-behavior#0.9.3",
-    "xp-animation": "ExpandJS/xp-animation#0.9.3",
-    "xp-array-behavior": "ExpandJS/xp-array-behavior#0.9.3",
-    "xp-collapse": "ExpandJS/xp-collapse#0.9.3",
-    "xp-cookie": "ExpandJS/xp-cookie#0.9.3",
-    "xp-device": "ExpandJS/xp-device#0.9.3",
-    "xp-dialog": "ExpandJS/xp-dialog#0.9.3",
-    "xp-doc-page": "ExpandJS/xp-doc-page#0.9.3",
-    "xp-doc-parser": "ExpandJS/xp-doc-parser#0.9.3",
-    "xp-doc-viewer": "ExpandJS/xp-doc-viewer#0.9.3",
-    "xp-embedded-behavior": "ExpandJS/xp-embedded-behavior#0.9.3",
-    "xp-emitter": "ExpandJS/xp-emitter#0.9.3",
-    "xp-focused-behavior": "ExpandJS/xp-focused-behavior#0.9.3",
-    "xp-grid": "ExpandJS/xp-grid#0.9.3",
-    "xp-i18n-behavior": "ExpandJS/xp-i18n-behavior#0.9.3",
-    "xp-icon": "ExpandJS/xp-icon#0.9.3",
-    "xp-iconset": "ExpandJS/xp-iconset#0.9.3",
-    "xp-input-behavior": "ExpandJS/xp-input-behavior#0.9.3",
-    "xp-label": "ExpandJS/xp-label#0.9.3",
-    "xp-list": "ExpandJS/xp-list#0.9.3",
-    "xp-markdown": "ExpandJS/xp-markdown#0.9.3",
-    "xp-master-state": "ExpandJS/xp-master-state#0.9.3",
-    "xp-media-query": "ExpandJS/xp-media-query#0.9.3",
-    "xp-meta": "ExpandJS/xp-meta#0.9.3",
-    "xp-observer": "ExpandJS/xp-observer#0.9.3",
-    "xp-overlay": "ExpandJS/xp-overlay#0.9.3",
-    "xp-overlay-behavior": "ExpandJS/xp-overlay-behavior#0.9.3",
-    "xp-pages": "ExpandJS/xp-pages#0.9.3",
-    "xp-pressed-behavior": "ExpandJS/xp-pressed-behavior#0.9.3",
-    "xp-pubsub-behavior": "ExpandJS/xp-pubsub-behavior#0.9.3",
-    "xp-referral-behavior": "ExpandJS/xp-referral-behavior#0.9.3",
-    "xp-request": "ExpandJS/xp-request#0.9.3",
-    "xp-router": "ExpandJS/xp-router#0.9.3",
-    "xp-schema": "ExpandJS/xp-schema#0.9.3",
-    "xp-script": "ExpandJS/xp-script#0.9.3",
-    "xp-selected-behavior": "ExpandJS/xp-selected-behavior#0.9.3",
-    "xp-shared-behavior": "ExpandJS/xp-shared-behavior#0.9.3",
-    "xp-slave-state": "ExpandJS/xp-slave-state#0.9.3",
-    "xp-targeter-behavior": "ExpandJS/xp-targeter-behavior#0.9.3",
-    "xp-tooltip": "ExpandJS/xp-tooltip#0.9.3",
-    "xp-window": "ExpandJS/xp-window#0.9.3"
+    "xp-adapter-behavior": "ExpandJS/xp-adapter-behavior#0.9.4",
+    "xp-anchor-behavior": "ExpandJS/xp-anchor-behavior#0.9.4",
+    "xp-animation": "ExpandJS/xp-animation#0.9.4",
+    "xp-array-behavior": "ExpandJS/xp-array-behavior#0.9.4",
+    "xp-collapse": "ExpandJS/xp-collapse#0.9.4",
+    "xp-cookie": "ExpandJS/xp-cookie#0.9.4",
+    "xp-device": "ExpandJS/xp-device#0.9.4",
+    "xp-dialog": "ExpandJS/xp-dialog#0.9.4",
+    "xp-doc-page": "ExpandJS/xp-doc-page#0.9.4",
+    "xp-doc-parser": "ExpandJS/xp-doc-parser#0.9.4",
+    "xp-doc-viewer": "ExpandJS/xp-doc-viewer#0.9.4",
+    "xp-embedded-behavior": "ExpandJS/xp-embedded-behavior#0.9.4",
+    "xp-emitter": "ExpandJS/xp-emitter#0.9.4",
+    "xp-focused-behavior": "ExpandJS/xp-focused-behavior#0.9.4",
+    "xp-form": "ExpandJS/xp-form#0.9.4",
+    "xp-grid": "ExpandJS/xp-grid#0.9.4",
+    "xp-i18n-behavior": "ExpandJS/xp-i18n-behavior#0.9.4",
+    "xp-icon": "ExpandJS/xp-icon#0.9.4",
+    "xp-iconset": "ExpandJS/xp-iconset#0.9.4",
+    "xp-input-behavior": "ExpandJS/xp-input-behavior#0.9.4",
+    "xp-label": "ExpandJS/xp-label#0.9.4",
+    "xp-list": "ExpandJS/xp-list#0.9.4",
+    "xp-markdown": "ExpandJS/xp-markdown#0.9.4",
+    "xp-master-state": "ExpandJS/xp-master-state#0.9.4",
+    "xp-media-query": "ExpandJS/xp-media-query#0.9.4",
+    "xp-meta": "ExpandJS/xp-meta#0.9.4",
+    "xp-observer": "ExpandJS/xp-observer#0.9.4",
+    "xp-overlay": "ExpandJS/xp-overlay#0.9.4",
+    "xp-overlay-behavior": "ExpandJS/xp-overlay-behavior#0.9.4",
+    "xp-pages": "ExpandJS/xp-pages#0.9.4",
+    "xp-pressed-behavior": "ExpandJS/xp-pressed-behavior#0.9.4",
+    "xp-pubsub-behavior": "ExpandJS/xp-pubsub-behavior#0.9.4",
+    "xp-referral-behavior": "ExpandJS/xp-referral-behavior#0.9.4",
+    "xp-request": "ExpandJS/xp-request#0.9.4",
+    "xp-router": "ExpandJS/xp-router#0.9.4",
+    "xp-schema": "ExpandJS/xp-schema#0.9.4",
+    "xp-script": "ExpandJS/xp-script#0.9.4",
+    "xp-selected-behavior": "ExpandJS/xp-selected-behavior#0.9.4",
+    "xp-shared-behavior": "ExpandJS/xp-shared-behavior#0.9.4",
+    "xp-slave-state": "ExpandJS/xp-slave-state#0.9.4",
+    "xp-targeter-behavior": "ExpandJS/xp-targeter-behavior#0.9.4",
+    "xp-tooltip": "ExpandJS/xp-tooltip#0.9.4",
+    "xp-window": "ExpandJS/xp-window#0.9.4"
   }
 }
