- Added mat-breadcrumb - Added xp-finder-behavior - Added xp-master-behavior - Added xp-slave-behavior - Major documentation improvements - Minor bug fixes - Moved item finding from xp-selected-behavior to xp-finder-behavior - Replaced xp-master-state with xp-master-behavior - Replaced xp-slave-state with xp-slave-behavior

--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "xp-elements",
   "license": "BSD-3-Clause",
   "version": "0.9.6",
+  "main": "xp-elements.html",
   "description": "A collection of ExpandJS elements",
   "homepage": "http://expandjs.com/elements",
   "authors": [
@@ -16,9 +17,6 @@
     "html5",
     "expandjs",
     "web-components"
-  ],
-  "main": [
-    "xp-elements.html"
   ],
   "ignore": [
     "**/.*"
