- Added mat-snackbar - Added mat-toast - Added xp-pressed-styles - Added xp-overlay-styles - Added xp-toast-behavior
- Implemented custom input validation
- Updated all elements to support Polymer 1.1
- Updated mat-settings

- Minor bug fixes

--- a/bower.json
+++ b/bower.json
@@ -50,6 +50,7 @@
     "xp-media-query": "ExpandJS/xp-media-query#0.9.8",
     "xp-meta": "ExpandJS/xp-meta#0.9.8",
     "xp-multi-select-behavior": "ExpandJS/xp-multi-select-behavior#0.9.8",
+    "xp-object-behavior": "ExpandJS/xp-object-behavior#0.9.8",
     "xp-observer": "ExpandJS/xp-observer#0.9.8",
     "xp-overlay": "ExpandJS/xp-overlay#0.9.8",
     "xp-overlay-behavior": "ExpandJS/xp-overlay-behavior#0.9.8",
