--- a/bower.json
+++ b/bower.json
@@ -57,6 +57,7 @@
     "xp-pressed-behavior": "ExpandJS/xp-pressed-behavior#0.9.11",
     "xp-pubsub-behavior": "ExpandJS/xp-pubsub-behavior#0.9.11",
     "xp-referral-behavior": "ExpandJS/xp-referral-behavior#0.9.11",
+    "xp-refirer-behavior": "ExpandJS/xp-refirer-behavior#0.9.11",
     "xp-request": "ExpandJS/xp-request#0.9.11",
     "xp-router": "ExpandJS/xp-router#0.9.11",
     "xp-schema": "ExpandJS/xp-schema#0.9.11",
