--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
   "name": "xp-elements",
   "license": "BSD-3-Clause",
-  "version": "0.9.11",
+  "version": "0.10.0",
   "main": "xp-elements.html",
-  "description": "A collection of ExpandJS elements",
+  "description": "The XP collection from ExpandJS",
   "homepage": "http://expandjs.com/elements",
   "authors": [
     "Giuliano Rullo <g.rullo@expandjs.com>",
@@ -11,63 +11,63 @@
     "Robert Manolea <r.manolea@expandjs.com>"
   ],
   "keywords": [
-    "custom elements",
-    "web components",
-    "web app",
-    "html5",
     "expandjs",
+    "web app",
+    "custom elements",
     "web-components"
   ],
   "ignore": [
     "**/.*"
   ],
   "dependencies": {
-    "xp-anchor-behavior": "ExpandJS/xp-anchor-behavior#0.9.11",
-    "xp-animation": "ExpandJS/xp-animation#0.9.11",
-    "xp-array-behavior": "ExpandJS/xp-array-behavior#0.9.11",
-    "xp-collapse": "ExpandJS/xp-collapse#0.9.11",
-    "xp-cookie": "ExpandJS/xp-cookie#0.9.11",
-    "xp-device": "ExpandJS/xp-device#0.9.11",
-    "xp-dialog": "ExpandJS/xp-dialog#0.9.11",
-    "xp-doc-page": "ExpandJS/xp-doc-page#0.9.11",
-    "xp-doc-parser": "ExpandJS/xp-doc-parser#0.9.11",
-    "xp-doc-viewer": "ExpandJS/xp-doc-viewer#0.9.11",
-    "xp-embedded-behavior": "ExpandJS/xp-embedded-behavior#0.9.11",
-    "xp-emitter": "ExpandJS/xp-emitter#0.9.11",
-    "xp-finder-behavior": "ExpandJS/xp-finder-behavior#0.9.11",
-    "xp-focused-behavior": "ExpandJS/xp-focused-behavior#0.9.11",
-    "xp-form": "ExpandJS/xp-form#0.9.11",
-    "xp-grid": "ExpandJS/xp-grid#0.9.11",
-    "xp-i18n-behavior": "ExpandJS/xp-i18n-behavior#0.9.11",
-    "xp-icon": "ExpandJS/xp-icon#0.9.11",
-    "xp-iconset": "ExpandJS/xp-iconset#0.9.11",
-    "xp-input-behavior": "ExpandJS/xp-input-behavior#0.9.11",
-    "xp-label": "ExpandJS/xp-label#0.9.11",
-    "xp-list": "ExpandJS/xp-list#0.9.11",
-    "xp-markdown": "ExpandJS/xp-markdown#0.9.11",
-    "xp-master-behavior": "ExpandJS/xp-master-behavior#0.9.11",
-    "xp-media-query": "ExpandJS/xp-media-query#0.9.11",
-    "xp-meta": "ExpandJS/xp-meta#0.9.11",
-    "xp-multi-select-behavior": "ExpandJS/xp-multi-select-behavior#0.9.11",
-    "xp-object-behavior": "ExpandJS/xp-object-behavior#0.9.11",
-    "xp-observer": "ExpandJS/xp-observer#0.9.11",
-    "xp-overlay": "ExpandJS/xp-overlay#0.9.11",
-    "xp-overlay-behavior": "ExpandJS/xp-overlay-behavior#0.9.11",
-    "xp-pages": "ExpandJS/xp-pages#0.9.11",
-    "xp-pressed-behavior": "ExpandJS/xp-pressed-behavior#0.9.11",
-    "xp-pubsub-behavior": "ExpandJS/xp-pubsub-behavior#0.9.11",
-    "xp-referral-behavior": "ExpandJS/xp-referral-behavior#0.9.11",
-    "xp-refirer-behavior": "ExpandJS/xp-refirer-behavior#0.9.11",
-    "xp-request": "ExpandJS/xp-request#0.9.11",
-    "xp-router": "ExpandJS/xp-router#0.9.11",
-    "xp-schema": "ExpandJS/xp-schema#0.9.11",
-    "xp-script": "ExpandJS/xp-script#0.9.11",
-    "xp-selected-behavior": "ExpandJS/xp-selected-behavior#0.9.11",
-    "xp-shared-behavior": "ExpandJS/xp-shared-behavior#0.9.11",
-    "xp-slave-behavior": "ExpandJS/xp-slave-behavior#0.9.11",
-    "xp-targeter-behavior": "ExpandJS/xp-targeter-behavior#0.9.11",
-    "xp-toast-behavior": "ExpandJS/xp-toast-behavior#0.9.11",
-    "xp-tooltip": "ExpandJS/xp-tooltip#0.9.11",
-    "xp-window": "ExpandJS/xp-window#0.9.11"
+    "xp-anchor-behavior": "ExpandJS/xp-anchor-behavior#0.10.0",
+    "xp-animation": "ExpandJS/xp-animation#0.10.0",
+    "xp-array-behavior": "ExpandJS/xp-array-behavior#0.10.0",
+    "xp-breadcrumb-behavior": "ExpandJS/xp-breadcrumb-behavior#0.10.0",
+    "xp-collapse-behavior": "ExpandJS/xp-collapse-behavior#0.10.0",
+    "xp-commands-behavior": "ExpandJS/xp-commands-behavior#0.10.0",
+    "xp-common-behavior": "ExpandJS/xp-common-behavior#0.10.0",
+    "xp-cookie": "ExpandJS/xp-cookie#0.10.0",
+    "xp-device": "ExpandJS/xp-device#0.10.0",
+    "xp-dialog-behavior": "ExpandJS/xp-dialog-behavior#0.10.0",
+    "xp-doc-parser": "ExpandJS/xp-doc-parser#0.10.0",
+    "xp-emitter": "ExpandJS/xp-emitter#0.10.0",
+    "xp-finder-behavior": "ExpandJS/xp-finder-behavior#0.10.0",
+    "xp-focused-behavior": "ExpandJS/xp-focused-behavior#0.10.0",
+    "xp-form": "ExpandJS/xp-form#0.10.0",
+    "xp-grid": "ExpandJS/xp-grid#0.10.0",
+    "xp-i18n-behavior": "ExpandJS/xp-i18n-behavior#0.10.0",
+    "xp-icon-behavior": "ExpandJS/xp-icon-behavior#0.10.0",
+    "xp-iconset": "ExpandJS/xp-iconset#0.10.0",
+    "xp-input-behavior": "ExpandJS/xp-input-behavior#0.10.0",
+    "xp-label-behavior": "ExpandJS/xp-label-behavior#0.10.0",
+    "xp-list-behavior": "ExpandJS/xp-list-behavior#0.10.0",
+    "xp-markdown": "ExpandJS/xp-markdown#0.10.0",
+    "xp-master-behavior": "ExpandJS/xp-master-behavior#0.10.0",
+    "xp-media-query": "ExpandJS/xp-media-query#0.10.0",
+    "xp-menu-behavior": "ExpandJS/xp-menu-behavior#0.10.0",
+    "xp-meta": "ExpandJS/xp-meta#0.10.0",
+    "xp-object-behavior": "ExpandJS/xp-object-behavior#0.10.0",
+    "xp-observer": "ExpandJS/xp-observer#0.10.0",
+    "xp-overlay": "ExpandJS/xp-overlay#0.10.0",
+    "xp-pages": "ExpandJS/xp-pages#0.10.0",
+    "xp-pressed-behavior": "ExpandJS/xp-pressed-behavior#0.10.0",
+    "xp-progress-behavior": "ExpandJS/xp-progress-behavior#0.10.0",
+    "xp-refirer-behavior": "ExpandJS/xp-refirer-behavior#0.10.0",
+    "xp-request": "ExpandJS/xp-request#0.10.0",
+    "xp-router": "ExpandJS/xp-router#0.10.0",
+    "xp-schema": "ExpandJS/xp-schema#0.10.0",
+    "xp-script": "ExpandJS/xp-script#0.10.0",
+    "xp-selector": "ExpandJS/xp-selector#0.10.0",
+    "xp-shared-behavior": "ExpandJS/xp-shared-behavior#0.10.0",
+    "xp-shell-behavior": "ExpandJS/xp-shell-behavior#0.10.0",
+    "xp-slave-behavior": "ExpandJS/xp-slave-behavior#0.10.0",
+    "xp-snackbar-behavior": "ExpandJS/xp-snackbar-behavior#0.10.0",
+    "xp-spinner-behavior": "ExpandJS/xp-spinner-behavior#0.10.0",
+    "xp-table-behavior": "ExpandJS/xp-table-behavior#0.10.0",
+    "xp-targeter-behavior": "ExpandJS/xp-targeter-behavior#0.10.0",
+    "xp-toast-behavior": "ExpandJS/xp-toast-behavior#0.10.0",
+    "xp-tooltip-behavior": "ExpandJS/xp-tooltip-behavior#0.10.0",
+    "xp-window": "ExpandJS/xp-window#0.10.0"
   }
 }
