--- a/bower.json
+++ b/bower.json
@@ -1,73 +1,38 @@
 {
   "name": "xp-elements",
+  "description": "A collection of core web components from the expand.js team",
+  "version": "1.0.0",
   "license": "BSD-3-Clause",
-  "version": "0.10.0",
   "main": "xp-elements.html",
-  "description": "The XP collection from ExpandJS",
-  "homepage": "http://expandjs.com/elements",
+  "homepage": "https://expandjs.com/components",
+
   "authors": [
     "Giuliano Rullo <g.rullo@expandjs.com>",
     "Maurizio Stefàno <m.stefano@expandjs.com>",
     "Robert Manolea <r.manolea@expandjs.com>"
   ],
+
   "keywords": [
     "expandjs",
-    "web app",
-    "custom elements",
-    "web-components"
+    "custom elements"
   ],
-  "ignore": [
-    "**/.*"
-  ],
+
   "dependencies": {
-    "xp-anchor-behavior": "ExpandJS/xp-anchor-behavior#0.10.0",
-    "xp-animation": "ExpandJS/xp-animation#0.10.0",
-    "xp-array-behavior": "ExpandJS/xp-array-behavior#0.10.0",
-    "xp-breadcrumb-behavior": "ExpandJS/xp-breadcrumb-behavior#0.10.0",
-    "xp-collapse-behavior": "ExpandJS/xp-collapse-behavior#0.10.0",
-    "xp-commands-behavior": "ExpandJS/xp-commands-behavior#0.10.0",
-    "xp-common-behavior": "ExpandJS/xp-common-behavior#0.10.0",
-    "xp-cookie": "ExpandJS/xp-cookie#0.10.0",
-    "xp-device": "ExpandJS/xp-device#0.10.0",
-    "xp-dialog-behavior": "ExpandJS/xp-dialog-behavior#0.10.0",
-    "xp-doc-parser": "ExpandJS/xp-doc-parser#0.10.0",
-    "xp-emitter": "ExpandJS/xp-emitter#0.10.0",
-    "xp-finder-behavior": "ExpandJS/xp-finder-behavior#0.10.0",
-    "xp-focused-behavior": "ExpandJS/xp-focused-behavior#0.10.0",
-    "xp-form": "ExpandJS/xp-form#0.10.0",
-    "xp-grid": "ExpandJS/xp-grid#0.10.0",
-    "xp-i18n-behavior": "ExpandJS/xp-i18n-behavior#0.10.0",
-    "xp-icon-behavior": "ExpandJS/xp-icon-behavior#0.10.0",
-    "xp-iconset": "ExpandJS/xp-iconset#0.10.0",
-    "xp-input-behavior": "ExpandJS/xp-input-behavior#0.10.0",
-    "xp-label-behavior": "ExpandJS/xp-label-behavior#0.10.0",
-    "xp-list-behavior": "ExpandJS/xp-list-behavior#0.10.0",
-    "xp-markdown": "ExpandJS/xp-markdown#0.10.0",
-    "xp-master-behavior": "ExpandJS/xp-master-behavior#0.10.0",
-    "xp-media-query": "ExpandJS/xp-media-query#0.10.0",
-    "xp-menu-behavior": "ExpandJS/xp-menu-behavior#0.10.0",
-    "xp-meta": "ExpandJS/xp-meta#0.10.0",
-    "xp-object-behavior": "ExpandJS/xp-object-behavior#0.10.0",
-    "xp-observer": "ExpandJS/xp-observer#0.10.0",
-    "xp-overlay": "ExpandJS/xp-overlay#0.10.0",
-    "xp-pages": "ExpandJS/xp-pages#0.10.0",
-    "xp-pressed-behavior": "ExpandJS/xp-pressed-behavior#0.10.0",
-    "xp-progress-behavior": "ExpandJS/xp-progress-behavior#0.10.0",
-    "xp-refirer-behavior": "ExpandJS/xp-refirer-behavior#0.10.0",
-    "xp-request": "ExpandJS/xp-request#0.10.0",
-    "xp-router": "ExpandJS/xp-router#0.10.0",
-    "xp-schema": "ExpandJS/xp-schema#0.10.0",
-    "xp-script": "ExpandJS/xp-script#0.10.0",
-    "xp-selector": "ExpandJS/xp-selector#0.10.0",
-    "xp-shared-behavior": "ExpandJS/xp-shared-behavior#0.10.0",
-    "xp-shell-behavior": "ExpandJS/xp-shell-behavior#0.10.0",
-    "xp-slave-behavior": "ExpandJS/xp-slave-behavior#0.10.0",
-    "xp-snackbar-behavior": "ExpandJS/xp-snackbar-behavior#0.10.0",
-    "xp-spinner-behavior": "ExpandJS/xp-spinner-behavior#0.10.0",
-    "xp-table-behavior": "ExpandJS/xp-table-behavior#0.10.0",
-    "xp-targeter-behavior": "ExpandJS/xp-targeter-behavior#0.10.0",
-    "xp-toast-behavior": "ExpandJS/xp-toast-behavior#0.10.0",
-    "xp-tooltip-behavior": "ExpandJS/xp-tooltip-behavior#0.10.0",
-    "xp-window": "ExpandJS/xp-window#0.10.0"
+    "cookies": "ScottHamper/cookies#^1.0.0",
+    "expandjs": "ExpandJS/expandjs#^1.0.0",
+    "iron-flex-layout":  "PolymerElements/iron-flex-layout#^1.0.0",
+    "markdown-it": "Markdown-it/markdown-it#^8.0.0",
+    "polymer": "Polymer/polymer#^1.7.0",
+    "prism": "PrismJS/prism#^1.5.0",
+    "web-animations-js": "Web-Animations/web-animations-js#^2.0.0",
+    "xp-emitter": "ExpandJS/xp-emitter#^1.0.0",
+    "xp-house": "ExpandJS/xp-house#^1.0.0",
+    "xp-primus": "ExpandJS/xp-primus#^1.0.0",
+    "xp-queue": "ExpandJS/xp-queue#^1.0.0",
+    "xp-request": "ExpandJS/xp-request#^1.0.0",
+    "xp-router": "ExpandJS/xp-router#^1.0.0",
+    "xp-schema": "ExpandJS/xp-schema#^1.0.0",
+    "xp-script": "ExpandJS/xp-script#^1.0.0",
+    "xp-uploader": "ExpandJS/xp-uploader#^1.0.0"
   }
 }
