--- a/bower.json
+++ b/bower.json
@@ -25,12 +25,13 @@
     "polymer": "Polymer/polymer#^1.7.0",
     "prism": "PrismJS/prism#^1.5.0",
     "web-animations-js": "Web-Animations/web-animations-js#^2.0.0",
+    "xp-buffer": "ExpandJS/xp-buffer#^1.0.0",
+    "xp-doc-parser": "ExpandJS/xp-doc-parser#^1.0.0",
     "xp-emitter": "ExpandJS/xp-emitter#^1.0.0",
     "xp-house": "ExpandJS/xp-house#^1.0.0",
     "xp-primus": "ExpandJS/xp-primus#^1.0.0",
     "xp-queue": "ExpandJS/xp-queue#^1.0.0",
     "xp-request": "ExpandJS/xp-request#^1.0.0",
-    "xp-router": "ExpandJS/xp-router#^1.0.0",
     "xp-schema": "ExpandJS/xp-schema#^1.0.0",
     "xp-script": "ExpandJS/xp-script#^1.0.0",
     "xp-uploader": "ExpandJS/xp-uploader#^1.0.0"
