--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,7 @@
     "xp-doc-parser": "ExpandJS/xp-doc-parser#^1.0.0",
     "xp-emitter": "ExpandJS/xp-emitter#^1.0.0",
     "xp-house": "ExpandJS/xp-house#^1.0.0",
+    "xp-monitor": "ExpandJS/xp-monitor#^1.0.0",
     "xp-primus": "ExpandJS/xp-primus#^1.0.0",
     "xp-queue": "ExpandJS/xp-queue#^1.0.0",
     "xp-request": "ExpandJS/xp-request#^1.0.0",
