--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "xp-elements",
   "description": "A collection of core web components from the expand.js team",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "license": "BSD-3-Clause",
   "main": "xp-elements.html",
   "homepage": "https://expandjs.com/components",
@@ -18,19 +18,19 @@
   ],
 
   "dependencies": {
-    "cookies": "ScottHamper/cookies#^1.0.0",
+    "cookies": "ScottHamper/cookies#^1.2.0",
     "expandjs": "ExpandJS/expandjs#^1.0.0",
-    "iron-flex-layout":  "PolymerElements/iron-flex-layout#^1.0.0",
-    "markdown-it": "Markdown-it/markdown-it#^8.0.0",
+    "iron-flex-layout":  "PolymerElements/iron-flex-layout#^1.3.0",
+    "markdown-it": "Markdown-it/markdown-it#^8.4.0",
     "polymer": "Polymer/polymer#1.7.0",
-    "prism": "PrismJS/prism#^1.5.0",
-    "web-animations-js": "Web-Animations/web-animations-js#^2.0.0",
+    "prism": "PrismJS/prism#^1.9.0",
+    "web-animations-js": "Web-Animations/web-animations-js#^2.3.0",
     "xp-buffer": "ExpandJS/xp-buffer#^1.0.0",
+    "xp-crypt": "ExpandJS/xp-crypt#^1.0.0",
     "xp-doc-parser": "ExpandJS/xp-doc-parser#^1.0.0",
     "xp-emitter": "ExpandJS/xp-emitter#^1.0.0",
     "xp-house": "ExpandJS/xp-house#^1.0.0",
     "xp-monitor": "ExpandJS/xp-monitor#^1.0.0",
-    "xp-primus": "ExpandJS/xp-primus#^1.0.0",
     "xp-queue": "ExpandJS/xp-queue#^1.0.0",
     "xp-request": "ExpandJS/xp-request#^1.0.0",
     "xp-schema": "ExpandJS/xp-schema#^1.0.0",
